--- a/src/main/resources/application-dev-example.yml
+++ b/src/main/resources/application-dev-example.yml
@@ -3,3 +3,6 @@ spring:
     url: jdbc:postgresql://localhost:{porta_do_container}/microservice_email
     username: {usuario_container}
     password: {password_container}
+  mail:
+    username: ******************@gmail.com
+    password: *******************
