--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+			<version>2.7.5</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
