--- a/src/main/resources/application-dev-example.yml
+++ b/src/main/resources/application-dev-example.yml
@@ -6,3 +6,6 @@ spring:
   mail:
     username: ******************@gmail.com
     password: *******************
+#  rabbitmq:
+#    addresses:
+#    queue:
